<resources>
    <string name="app_name">App de Noticias Adm</string>
    <string name="Titulo_Principal">Escreva uma Noticia</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_noticia">Escreva sua Noticia</string>
    <string name="hint_data">Data de Publicação</string>
    <string name="hint_autor">Autor</string>
    <string name="txt_button_pb">Publicar Noticia</string>
</resources>