<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo_Principal"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/txt_noticia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_noticia"
        android:padding="15dp"
        android:background="@color/white"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/txt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/txt_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_autor"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_pb"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:backgroundTint="@color/teal_700"/>

</LinearLayout>

</ScrollView>